--- a/course.html
+++ b/course.html
@@ -36,8 +36,8 @@
                     <h3>Day 1: Download Tools and Setup</h3>
                 </div>
                 <div class="video-container">
-                    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/G82gywRR4o8?si=KxfWRdGb6NMHuLLs" frameborder="0" allowfullscreen></iframe> -->
-                    <img src="/coming_soon.gif" alt="Coming Soon!" width="560" height="315">
+                    <!-- <img src="/coming_soon.gif" alt="Coming Soon!" width="560" height="315"> -->
+                    <iframe width="560" height="315" src="/coming_soon.gif" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="description">
                     <p>Welcome to Day 1 of your ROS2 mini-course! Today, we will focus on setting up the essential tools
@@ -51,8 +51,8 @@
                     <h3>Day 2: Create our first robot</h3>
                 </div>
                 <div class="video-container">
-                    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/zP__x9c0EuQ?si=-8rnsqmO2oovf_V4" title="YouTube video player" frameborder="0" allowfullscreen></iframe> -->
-                    <img src="/coming_soon.gif" alt="Coming Soon!" width="560" height="315">
+                    <!-- <img src="/coming_soon.gif" alt="Coming Soon!" width="560" height="315"> -->
+                    <iframe width="560" height="315" src="/coming_soon.gif" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="description">
                     <p>Welcome to Day 2 of your ROS2 mini-course! Today, we will create our first robot by building a
@@ -66,8 +66,8 @@
                     <h3>Day 3: Simulate our robot in Gazebo</h3>
                 </div>
                 <div class="video-container">
-                    <img src="/coming_soon.gif" alt="Coming Soon!" width="560" height="315">
-                    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/twHUNOwtobI?si=fyY6EYaTRyOjioDv" title="YouTube video player3" frameborder="0" allowfullscreen></iframe> -->
+                    <!-- <img src="/coming_soon.gif" alt="Coming Soon!" width="560" height="315"> -->
+                    <iframe width="560" height="315" src="/coming_soon.gif" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="description">
                     <p>Welcome to Day 3 of your ROS2 mini-course! Today, we will simulate our first robot in Gazebo, a
@@ -81,8 +81,8 @@
                     <h3>Day 4: What does our robot see? Using RViz2</h3>
                 </div>
                 <div class="video-container">
-                    <img src="/coming_soon.gif" alt="Coming Soon!" width="560" height="315">
-                    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_4" frameborder="0" allowfullscreen></iframe> -->
+                    <!-- <img src="/coming_soon.gif" alt="Coming Soon!" width="560" height="315"> -->
+                    <iframe width="560" height="315" src="/coming_soon.gif" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="description">
                     <p>Welcome to Day 4 of your ROS2 mini-course! Today, we will focus on visualizing sensor data from
@@ -96,8 +96,8 @@
                     <h3>Day 5: Navigate our robot</h3>
                 </div>
                 <div class="video-container">
-                    <img src="/coming_soon.gif" alt="Coming Soon!" width="560" height="315">
-                    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_5" frameborder="0" allowfullscreen></iframe> -->
+                    <!-- <img src="/coming_soon.gif" alt="Coming Soon!" width="560" height="315"> -->
+                    <iframe width="560" height="315" src="/coming_soon.gif" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="description">
                     <p>Today's the day we put everything we've learned to the test and get our robot moving! Buckle up,
@@ -116,13 +116,11 @@
                             <span>Email</span>
                         </a> -->
                         <a href="https://discord.gg/7rMq2JnyMY" class="social-link w-inline-block">
-                            <img src="https://img.icons8.com/?size=100&id=61604&format=png&color=000000" loading="lazy"
-                                width="25" height="25" alt="Discord">
+                            <img src="https://img.icons8.com/?size=100&id=61604&format=png&color=000000" loading="lazy" width="25" height="25" alt="Discord">
                             <span>Discord</span>
                         </a>
                         <a href="https://linkedin.com/" class="social-link w-inline-block">
-                            <img src="https://img.icons8.com/?size=100&id=44019&format=png&color=000000" loading="lazy"
-                                width="25" height="25" alt="LinkedIn">
+                            <img src="https://img.icons8.com/?size=100&id=44019&format=png&color=000000" loading="lazy" width="25" height="25" alt="LinkedIn">
                             <span>LinkedIn</span>
                         </a>
                     </div>
