--- a/course.html
+++ b/course.html
@@ -119,7 +119,7 @@
                             <img src="https://img.icons8.com/?size=100&id=61604&format=png&color=000000" loading="lazy" width="25" height="25" alt="Discord">
                             <span>Discord</span>
                         </a>
-                        <a href="https://linkedin.com/" class="social-link w-inline-block">
+                        <a href="https://www.linkedin.com/in/maiavrobotics/" class="social-link w-inline-block">
                             <img src="https://img.icons8.com/?size=100&id=44019&format=png&color=000000" loading="lazy" width="25" height="25" alt="LinkedIn">
                             <span>LinkedIn</span>
                         </a>
