--- a/course.html
+++ b/course.html
@@ -40,6 +40,7 @@
                     <iframe width="560" height="315" src="/coming_soon.gif" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="description">
+                    <h4>Video Summary</h4>
                     <p>Welcome to Day 1 of your ROS2 mini-course! Today, we will focus on setting up the essential tools
                         you need to start working with ROS2 on your Windows machine. This involves installing Visual
                         Studio Code (VSCode), Docker, and Windows Subsystem for Linux (WSL). Let's get started!</p>
@@ -55,6 +56,7 @@
                     <iframe width="560" height="315" src="/coming_soon.gif" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="description">
+                    <h4>Video Summary</h4>
                     <p>Welcome to Day 2 of your ROS2 mini-course! Today, we will create our first robot by building a
                         URDF (Unified Robot Description Format) model. URDF is an XML format used in ROS to describe all
                         elements of a robot.</p>
@@ -70,6 +72,7 @@
                     <iframe width="560" height="315" src="/coming_soon.gif" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="description">
+                    <h4>Video Summary</h4>
                     <p>Welcome to Day 3 of your ROS2 mini-course! Today, we will simulate our first robot in Gazebo, a
                         powerful robot simulation tool. We'll integrate our URDF model into Gazebo and run a simple
                         simulation to see our robot in action.</p>
@@ -85,6 +88,7 @@
                     <iframe width="560" height="315" src="/coming_soon.gif" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="description">
+                    <h4>Video Summary</h4>
                     <p>Welcome to Day 4 of your ROS2 mini-course! Today, we will focus on visualizing sensor data from
                         our robot using RViz2. This involves adding a sensor to our URDF model, launching the robot in
                         Gazebo, and then visualizing the sensor data in RViz2.</p>
@@ -100,6 +104,7 @@
                     <iframe width="560" height="315" src="/coming_soon.gif" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="description">
+                    <h4>Video Summary</h4>
                     <p>Today's the day we put everything we've learned to the test and get our robot moving! Buckle up,
                         because we'll be diving into the exciting world of ROS2 navigation.</p>
                 </div>
@@ -119,9 +124,13 @@
                             <img src="https://img.icons8.com/?size=100&id=61604&format=png&color=000000" loading="lazy" width="25" height="25" alt="Discord">
                             <span>Discord</span>
                         </a>
-                        <a href="https://www.linkedin.com/in/maiavrobotics/" class="social-link w-inline-block">
+                        <a href="https://linkedin.com/" class="social-link w-inline-block">
                             <img src="https://img.icons8.com/?size=100&id=44019&format=png&color=000000" loading="lazy" width="25" height="25" alt="LinkedIn">
                             <span>LinkedIn</span>
+                        </a>
+                        <a href="mailto: maiav.robotics@gmail.com" class="social-link w-inline-block" type="Email">
+                            <img src="https://img.icons8.com/?size=100&id=44829&format=png&color=000000" loading="lazy" width="25" height="25" alt="LinkedIn">
+                            <span>Email</span>
                         </a>
                     </div>
                 </div>
