--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="course.html" class="case-study-btn">Visit the Course</a>
                 </div>
                 <div class="project-image">
-                    <img src="/coming_soon.gif" alt="Coming Soon!">
+                    <img src="/mini_course.gif" alt="Coming Soon!">
                 </div>
             </div>
         </section>
